@@ -970,11 +970,13 @@ TORRENT_TEST(tracker_ipv6_argument)
 {
 	bool got_announce = false;
 	bool got_ipv6 = false;
+	bool got_ipv4 = false;
 	tracker_test(
 		[](lt::add_torrent_params& p, lt::session& ses)
 		{
 			settings_pack pack;
 			pack.set_bool(settings_pack::anonymous_mode, false);
+			pack.set_str(settings_pack::listen_interfaces, "10.0.0.3:0,[ffff::1337]:0");
 			ses.apply_settings(pack);
 			p.ti = make_torrent(true);
 			return 60;
@@ -984,13 +986,22 @@ TORRENT_TEST(tracker_ipv6_argument)
 		{
 			got_announce = true;
 			bool const stop_event = req.find("&event=stopped") != std::string::npos;
-			// stop events don't need to advertise the IPv6 address
-			std::string::size_type pos = req.find("&ipv6=");
-			TEST_CHECK(pos != std::string::npos || stop_event);
-			got_ipv6 |= pos != std::string::npos;
-			// make sure the IPv6 argument is url encoded
-			TEST_CHECK(req.substr(pos + 6, req.substr(pos + 6).find_first_of('&'))
-				== "ffff%3a%3a1337");
+			// stop events don't need to advertise the IPv6/IPv4 address
+			{
+				std::string::size_type const pos = req.find("&ipv6=");
+				TEST_CHECK(pos != std::string::npos || stop_event);
+				got_ipv6 |= pos != std::string::npos;
+				// make sure the IPv6 argument is url encoded
+				TEST_EQUAL(req.substr(pos + 6, req.substr(pos + 6).find_first_of('&'))
+					, "ffff%3a%3a1337");
+			}
+
+			{
+				std::string::size_type const pos = req.find("&ipv4=");
+				TEST_CHECK(pos != std::string::npos || stop_event);
+				got_ipv4 |= pos != std::string::npos;
+				TEST_EQUAL(req.substr(pos + 6, req.substr(pos + 6).find_first_of('&')), "10.0.0.3");
+			}
 			return sim::send_response(200, "OK", 11) + "d5:peers0:e";
 		}
 		, [](torrent_handle) {}
