@@ -1,5 +1,6 @@
 1.2 release
 
+	* support &ipv4= tracker argument for private torrents
 	* renamed debug_notification to connect_notification
 	* when updating listen sockets, only post alerts for new ones
 	* deprecate anonymous_mode_alert
